--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ occur during each trade: Reflection, LP Acquisition, and Burn.</div>
                                     
                                     
                                     <!-- Options btn color: .btn-success | .btn-info | .btn-warning | .btn-danger | .btn-primary -->
-                                    <div class="title__action"><a href="https://v1exchange.pancakeswap.finance/#/swap?outputCurrency=0x372db995dfef35bf067c580128a9dbd32a361cf2" target="_blank" class="btn btn-warning">Buy Now</a></div>
+                                    <div class="title__action"><a href="exchange.pancakeswap.finance/#/swap?outputCurrency=0x372db995dfef35bf067c580128a9dbd32a361cf2" target="_blank" class="btn btn-warning">Buy Now</a></div>
                                     <br>
                                     <button href="https://t.me/fuckteslabsc" target="_blank" type="button" class="btn btn-primary btn-lg"><a href="https://t.me/fuckteslabsc" target="_blank" >Telergram</a></button>
                                         &nbsp;
